--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.26)
 project(register_mocking)
 
-add_executable(main main.cpp gpio.cpp)
+add_executable(main main.cpp rp2040_gpio.cpp simulated_device_register.cpp)
 set_target_properties(main PROPERTIES CXX_STANDARD 23)
