restructured the workspace again. Added shared interfaces to HAL project. made rp2040 project link with HAL forwarding its interface headers. Meaning that rp2040 does not have to expose any interface.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.26)
 project(register_mocking)
 
-add_subdirectory(lib)
+add_subdirectory(lib/HAL)
+add_subdirectory(lib/rp2040)
 add_subdirectory(src)
 add_subdirectory(test)
