actually built the pad control cpp. now registers initialize properly.

--- a/lib/rp2040/CMakeLists.txt
+++ b/lib/rp2040/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(lib)
 
-add_library(rp2040_impl STATIC GPIO/user_IO.cpp GPIO/GPIO.cpp)
+add_library(rp2040_impl STATIC GPIO/GPIO.cpp GPIO/user_IO.cpp GPIO/pad_control.cpp)
 set_target_properties(rp2040_impl PROPERTIES CXX_STANDARD 23)
 target_link_libraries(rp2040_impl PUBLIC HAL)
