defined some more bitfields in registers. Made bitfield operations noexcept.

--- a/lib/HAL/CMakeLists.txt
+++ b/lib/HAL/CMakeLists.txt
@@ -1,6 +1,12 @@
 project(HAL)
 
-add_library(HAL STATIC)
+add_library(HAL 
+    inc/HAL/bitfield.hpp 
+    inc/HAL/GPIO.hpp 
+    inc/HAL/simulated_device_register.hpp 
+    inc/HAL/simulated_peripheral.hpp )
+
 target_include_directories(HAL PUBLIC inc)
+set_target_properties(HAL PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(HAL PROPERTIES CXX_STANDARD 23)
 target_compile_definitions(HAL PUBLIC USE_SIMULATED_REGISTERS=true)
