added constructors for all registers. All except CTRL default construct for now. Made effect handler table freestanding. Made bitfield default construct with 0.

--- a/lib/HAL/CMakeLists.txt
+++ b/lib/HAL/CMakeLists.txt
@@ -4,7 +4,8 @@ add_library(HAL
     inc/HAL/bitfield.hpp 
     inc/HAL/GPIO.hpp 
     inc/HAL/simulated_device_register.hpp 
-    inc/HAL/simulated_peripheral.hpp )
+    inc/HAL/simulated_peripheral.hpp
+    src/simulated_device_register.cpp )
 
 target_include_directories(HAL PUBLIC inc)
 set_target_properties(HAL PROPERTIES LINKER_LANGUAGE CXX)
