fixed typo. Removed explicit linker language definition as HAL now has a cpp file.

--- a/lib/HAL/CMakeLists.txt
+++ b/lib/HAL/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(HAL)
 
-add_library(HAL 
+add_library(HAL STATIC
     inc/HAL/bitfield.hpp 
     inc/HAL/GPIO.hpp 
     inc/HAL/simulated_device_register.hpp 
@@ -8,6 +8,6 @@ add_library(HAL
     src/simulated_device_register.cpp )
 
 target_include_directories(HAL PUBLIC inc)
-set_target_properties(HAL PROPERTIES LINKER_LANGUAGE CXX)
+# set_target_properties(HAL PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(HAL PROPERTIES CXX_STANDARD 23)
 target_compile_definitions(HAL PUBLIC USE_SIMULATED_REGISTERS=true)
