separated headers from cpp's in rp2040 lib.

--- a/lib/HAL/CMakeLists.txt
+++ b/lib/HAL/CMakeLists.txt
@@ -1,13 +1,7 @@
 project(HAL)
 
-add_library(HAL STATIC
-    inc/HAL/bitfield.hpp 
-    inc/HAL/GPIO.hpp 
-    inc/HAL/simulated_device_register.hpp 
-    inc/HAL/simulated_peripheral.hpp
-    src/simulated_device_register.cpp )
+add_library(HAL STATIC src/simulated_device_register.cpp )
 
 target_include_directories(HAL PUBLIC inc)
-# set_target_properties(HAL PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(HAL PROPERTIES CXX_STANDARD 23)
 target_compile_definitions(HAL PUBLIC USE_SIMULATED_REGISTERS=true)
