moved attachment/initialization of effect handler to storage_handle initialization.

--- a/lib/rp2040/CMakeLists.txt
+++ b/lib/rp2040/CMakeLists.txt
@@ -3,8 +3,7 @@ project(lib)
 add_library(rp2040_impl STATIC 
     src/GPIO/GPIO.cpp 
     src/GPIO/user_IO.cpp 
-    src/GPIO/pad_control.cpp 
-    src/GPIO/effect_handler_initialization.cpp)
+    src/GPIO/pad_control.cpp )
 
 set_target_properties(rp2040_impl PROPERTIES CXX_STANDARD 23)
 target_link_libraries(rp2040_impl PUBLIC HAL)
