--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.26)
 project(register_mocking)
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
-    add_compile_options(-fprofile-arcs -ftest-coverage)
+    add_compile_options(-fprofile-arcs -ftest-coverage -Og)
     add_link_options(-lgcov --coverage)
     include(CTest)
 endif()
