disabled building of tests when trying to deploy. added Cmake-toolchain config file that conditionally changes tools for compiling for rp2040. added linkerscript that should define the memory space in which the binary can live. added syscall stub files in HAL component. Those are not found yet by stdlib though. Copied  upload and debug scripts from other project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,7 @@ endif()
 add_subdirectory(lib/HAL)
 add_subdirectory(lib/rp2040)
 add_subdirectory(src)
+
+if(${CMAKE_CROSSCOMPILING} MATCHES 0)
 add_subdirectory(test)
+endif()
