--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,7 @@
         "format": "cpp",
         "span": "cpp",
         "expected": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": true,
+    // "cmake.configureArgs": ["-DCMAKE_TOOLCHAIN_FILE=build/rp2040_toolchain.cmake"]
 }
