--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 3.26)
+
+# Pull in SDK (must be before project)
+set(PICO_SDK_FETCH_FROM_GIT on)
+include(src/pico_sdk_import.cmake)
+pico_sdk_init()
 project(register_mocking)
 
-if(CMAKE_BUILD_TYPE MATCHES Debug)
+if(${CMAKE_SYSTEM_NAME} MATCHES ${CMAKE_HOST_SYSTEM_NAME})
     add_compile_options(-fprofile-arcs -ftest-coverage)
     add_link_options(-lgcov --coverage)
     include(CTest)
