Added extra safety check by using helper function instead of duplicating is_pin_reserved. Changed openocd scripts a bit to speed up uploading. Improved pico-SDK integration. Actually initialized the SDK which changed the section layout in the elf file.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,13 @@
 project(application C CXX ASM)
+include(pico_sdk_import.cmake)
+set(PICO_CXX_ENABLE_EXCEPTIONS 1)
+pico_sdk_init()
+
 add_executable(main main.cpp)
 
-include(pico_sdk_import.cmake)
-
-pico_enable_stdio_usb(main 1)
+pico_enable_stdio_usb(main 0)
 pico_enable_stdio_uart(main 1)
+pico_add_extra_outputs(main)
 
 target_link_libraries(main pico_stdlib rp2040_impl)
 set_target_properties(main PROPERTIES CXX_STANDARD 23)
