--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,21 +31,19 @@
         },
         {
             "name": "Pico Debug",
+            "device": "RP2040",
+            "gdbPath": "arm-none-eabi-gdb",
             "cwd": "${workspaceRoot}",
             "executable": "${command:cmake.launchTargetPath}",
             "request": "launch",
             "type": "cortex-debug",
             "servertype": "openocd",
-            // This may need to be "arm-none-eabi-gdb" for some previous builds
-            "gdbPath": "gdb-multiarch",
-            "device": "RP2040",
             "configFiles": [
-                "interface/raspberrypi-swd.cfg",
-                "target/rp2040.cfg"
+                "/interface/ftdi/ft232h-module-swd.cfg",
+                "/target/rp2040.cfg"
             ],
             "svdFile": "${env:PICO_SDK_PATH}/src/rp2040/hardware_regs/rp2040.svd",
-            "runToEntryPoint": "main",
-            // Work around for stopping at main on restart
+            "runToMain": true,
             "postRestartCommands": [
                 "break main",
                 "continue"
