Changed CMAKE_CROSSCOMPILING check to a clearer variant.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ include(src/pico_sdk_import.cmake)
 pico_sdk_init()
 project(register_mocking)
 
-if(${CMAKE_SYSTEM_NAME} MATCHES ${CMAKE_HOST_SYSTEM_NAME})
+if(NOT DEFINED CMAKE_CROSSCOMPILING)
     add_compile_options(-fprofile-arcs -ftest-coverage)
     add_link_options(-lgcov --coverage)
     include(CTest)
@@ -16,6 +16,6 @@ add_subdirectory(lib/HAL)
 add_subdirectory(lib/rp2040)
 add_subdirectory(src)
 
-if(${CMAKE_CROSSCOMPILING} MATCHES 0)
+if(NOT DEFINED CMAKE_CROSSCOMPILING)
 add_subdirectory(test)
 endif()
