--- a/lib/HAL/CMakeLists.txt
+++ b/lib/HAL/CMakeLists.txt
@@ -5,9 +5,8 @@ add_library(HAL STATIC src/simulated_device_register.cpp src/syscalls.cpp )
 target_include_directories(HAL PUBLIC inc)
 set_target_properties(HAL PROPERTIES CXX_STANDARD 23)
 
-string(TOLOWER ${CMAKE_CROSSCOMPILING} cmake_crosscompiling)
 message(CHECK_START "Checking if we are crosscompiling: ")
-if(${CMAKE_CROSSCOMPILING})
+if(DEFINED CMAKE_CROSSCOMPILING)
     message(CHECK_PASS "true")
     set(use_simulated_registers false)
 else()
