--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,18 @@
-project(application C CXX ASM)
+cmake_minimum_required(VERSION 3.26)
+
+# Pull in SDK (must be before project)
+set(PICO_SDK_FETCH_FROM_GIT on)
 include(pico_sdk_import.cmake)
-set(PICO_CXX_ENABLE_EXCEPTIONS 1)
 pico_sdk_init()
 
-add_executable(main main.cpp)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../lib ${CMAKE_CURRENT_BINARY_DIR}/lib)
 
+project(application)
+add_executable(main main.cpp)
+target_link_libraries(main PRIVATE HAL rp2040_impl pico_stdlib)
 pico_enable_stdio_usb(main 0)
 pico_enable_stdio_uart(main 1)
 pico_add_extra_outputs(main)
 
-target_link_libraries(main pico_stdlib rp2040_impl)
+
 set_target_properties(main PROPERTIES CXX_STANDARD 23)
