--- a/lib/rp2040/CMakeLists.txt
+++ b/lib/rp2040/CMakeLists.txt
@@ -4,7 +4,8 @@ add_library(rp2040_impl STATIC
     src/GPIO/GPIO.cpp   
     src/GPIO/user_IO.cpp 
     src/GPIO/pad_control.cpp
-    src/GPIO/SIO.cpp )
+    src/GPIO/SIO.cpp
+    src/time/clock_control.cpp )
 
 target_compile_options(rp2040_impl PRIVATE -Wall -Wextra -Wpedantic -Werror)
 set_target_properties(rp2040_impl PROPERTIES CXX_STANDARD 23)
