Finished the register mapping for the clocks. Made the clock periph block. Added getting name and number of clocks to interface.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,7 +68,8 @@
         "charconv": "cpp",
         "format": "cpp",
         "span": "cpp",
-        "expected": "cpp"
+        "expected": "cpp",
+        "ranges": "cpp"
     },
     "cmake.configureOnOpen": true,
     // "cmake.configureArgs": ["-DCMAKE_TOOLCHAIN_FILE=build/rp2040_toolchain.cmake"]
