--- a/lib/rp2040/CMakeLists.txt
+++ b/lib/rp2040/CMakeLists.txt
@@ -6,7 +6,8 @@ add_library(rp2040_impl STATIC
     src/GPIO/pad_control.cpp
     src/GPIO/SIO.cpp
     src/time/clocks.cpp
-    src/time/clock_control.cpp )
+    src/time/clock_control.cpp
+    src/time/ROSC.cpp)
 
 target_compile_options(rp2040_impl PRIVATE -Wall -Wextra -Wpedantic -Werror)
 set_target_properties(rp2040_impl PROPERTIES CXX_STANDARD 23)
