--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,16 @@ project(unit_tests)
 include(CTest)
 
 add_executable(GPIO_tests GPIO_tests.cpp)
+
+include(CheckIPOSupported)
+check_ipo_supported(RESULT supported OUTPUT error)
+if( supported )
+message(STATUS "IPO / LTO enabled")
+    set_target_properties(GPIO_tests PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
+else()
+    message(STATUS "IPO / LTO not supported: <${error}>")
+endif()
+
 target_compile_options(GPIO_tests PRIVATE -fprofile-arcs -ftest-coverage)
 target_link_options(GPIO_tests PRIVATE -lgcov --coverage)
 target_link_libraries(GPIO_tests PRIVATE rp2040_impl GTest::gtest_main)
@@ -20,6 +30,16 @@ set_target_properties(GPIO_tests PROPERTIES CXX_STANDARD 23)
 add_test(NAME run_GPIO_tests COMMAND GPIO_tests)
 
 add_executable(clock_control_tests clock_control_tests.cpp)
+
+include(CheckIPOSupported)
+check_ipo_supported(RESULT supported OUTPUT error)
+if( supported )
+message(STATUS "IPO / LTO enabled")
+    set_target_properties(clock_control_tests PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
+else()
+    message(STATUS "IPO / LTO not supported: <${error}>")
+endif()
+
 target_compile_options(clock_control_tests PRIVATE -fprofile-arcs -ftest-coverage)
 target_link_options(clock_control_tests PRIVATE -lgcov --coverage)
 target_link_libraries(clock_control_tests PRIVATE rp2040_impl GTest::gtest_main)
