Updated gitignore and deploy script to new binary directories. Updated SDK in intellisense to point to imported SDK. Made bitfield constexpr using std::bit_cast instead of reinterpret_cast. Fixed base address of ROSC; And did some work on its interface. Changed the main PI application to use commands to set the LED.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,19 +10,22 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../lib ${CMAKE_CURRENT_BINARY_DIR}/
 project(application)
 add_executable(main main.cpp)
 
-include(CheckIPOSupported)
-check_ipo_supported(RESULT supported OUTPUT error)
-if( supported )
-message(STATUS "IPO / LTO enabled")
-    set_target_properties(main PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
-else()
-    message(STATUS "IPO / LTO not supported: <${error}>")
-endif()
+# include(CheckIPOSupported)
+# check_ipo_supported(RESULT supported OUTPUT error)
+# if( supported )
+# message(STATUS "IPO / LTO enabled")
+#     set_target_properties(main PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
+# else()
+#     message(STATUS "IPO / LTO not supported: <${error}>")
+# endif()
 
 target_link_libraries(main PRIVATE HAL rp2040_impl pico_stdlib)
-pico_enable_stdio_usb(main 0)
-pico_enable_stdio_uart(main 1)
+pico_enable_stdio_usb(main 1)
+pico_enable_stdio_uart(main 0)
 pico_add_extra_outputs(main)
+
+# 365kB with USB as output.
+# 352kB with UART as output.
 
 
 set_target_properties(main PROPERTIES CXX_STANDARD 23)
