Upped the frequency in the flash script. Extended main with getter function and error printing.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,5 +78,6 @@
         "typeindex": "cpp"
     },
     "cmake.configureOnOpen": true,
+    "cmake.sourceDirectory": "/home/matthijs/Documents/repos/register_simulation/src",
     // "cmake.configureArgs": ["-DCMAKE_TOOLCHAIN_FILE=build/rp2040_toolchain.cmake"]
 }
