--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,7 @@
             "device": "RP2040",
             "gdbPath": "arm-none-eabi-gdb",
             "cwd": "${workspaceRoot}",
-            "executable": "${command:cmake.launchTargetPath}",
+            "executable": "${workspaceRoot}/build_app/main.elf",
             "request": "launch",
             "type": "cortex-debug",
             "servertype": "openocd",
@@ -43,7 +43,7 @@
                 "/target/rp2040.cfg"
             ],
             "svdFile": "${env:PICO_SDK_PATH}/src/rp2040/hardware_regs/rp2040.svd",
-            "runToMain": true,
+            "runToEntryPoint": "main",
             "postRestartCommands": [
                 "break main",
                 "continue"
