Added more specialized namespace for ROSC registers to keep its CTRL register from clasing with the same named register in GPIO. Added custom string parameter to named_function type. Added named_function to configure the strength of the internal osscilator.

--- a/lib/HAL/CMakeLists.txt
+++ b/lib/HAL/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(HAL)
 
-add_library(HAL STATIC src/simulated_device_register.cpp src/syscalls.cpp )
+add_library(HAL STATIC src/simulated_device_register.cpp src/syscalls.cpp src/clock_control.cpp)
 target_include_directories(HAL PUBLIC inc)
 set_target_properties(HAL PROPERTIES CXX_STANDARD 23)
 
