Added UART peripheral structure. Extended simulated periperal to support duplicate peripherals. By extending the array size a multiple of the periph-size. Added initial UART_tests.cpp to test if it all compiles. Combined unit tests into single executable to remove duplicated settings.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,39 +11,20 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../lib ${CMAKE_CURRENT_BINARY_DIR}/
 project(unit_tests)
 include(CTest)
 
-add_executable(GPIO_tests GPIO_tests.cpp)
+add_executable(tests GPIO_tests.cpp clock_control_tests.cpp UART_tests.cpp)
 
 include(CheckIPOSupported)
 check_ipo_supported(RESULT supported OUTPUT error)
 if( supported )
 message(STATUS "IPO / LTO enabled")
-    set_target_properties(GPIO_tests PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
+    set_target_properties(tests PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
 else()
     message(STATUS "IPO / LTO not supported: <${error}>")
 endif()
 
-target_compile_options(GPIO_tests PRIVATE -fprofile-arcs -ftest-coverage)
-target_link_options(GPIO_tests PRIVATE -lgcov --coverage)
-target_link_libraries(GPIO_tests PRIVATE rp2040_impl GTest::gtest_main)
-set_target_properties(GPIO_tests PROPERTIES CXX_STANDARD 23)
+target_compile_options(tests PRIVATE -fprofile-arcs -ftest-coverage)
+target_link_options(tests PRIVATE -lgcov --coverage)
+target_link_libraries(tests PRIVATE rp2040_impl GTest::gtest_main)
+set_target_properties(tests PROPERTIES CXX_STANDARD 23)
 
-add_test(NAME run_GPIO_tests COMMAND GPIO_tests)
-
-add_executable(clock_control_tests clock_control_tests.cpp)
-
-include(CheckIPOSupported)
-check_ipo_supported(RESULT supported OUTPUT error)
-if( supported )
-message(STATUS "IPO / LTO enabled")
-    set_target_properties(clock_control_tests PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
-else()
-    message(STATUS "IPO / LTO not supported: <${error}>")
-endif()
-
-target_compile_options(clock_control_tests PRIVATE -fprofile-arcs -ftest-coverage)
-target_link_options(clock_control_tests PRIVATE -lgcov --coverage)
-target_link_libraries(clock_control_tests PRIVATE rp2040_impl GTest::gtest_main)
-set_target_properties(clock_control_tests PROPERTIES CXX_STANDARD 23)
-
-add_test(NAME run_clock_control_tests COMMAND clock_control_tests)
-
+add_test(NAME run_tests COMMAND tests)
