--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build_tests/tests",
-            "args": [ //"--gtest_filter=GPIO_tests.correct_mode_is_returned_when_set"
+            "args": [ "--gtest_filter=ROSC_tests.*"
             ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
