Changed the switch to use simulated registers again. std::derived_from does not resolve the conditional inheritance. So the condition for that inheritance is used directly instead. Removed the CMAKE_CROSSCOMPILING check and defining the USE_SIMULATED_REGISTERS macro as a public symbol.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build_tests/tests",
-            "args": [ "--gtest_filter=UART_tests.*"
-            ],
+            // "args": [ "--gtest_filter=UART_tests.*"
+            // ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
