Started on an error_code interface that does not use virtual inheritance or has a std::string dependency. Added getter and setter of UART-data-format configuration in UART impl. Upped cmake version for potential C++ modules support.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,7 +76,8 @@
         "complex": "cpp",
         "shared_mutex": "cpp",
         "typeindex": "cpp",
-        "clocks.h": "c"
+        "clocks.h": "c",
+        "source_location": "cpp"
     },
     "cmake.configureOnOpen": true,
     "cmake.sourceDirectory": "/home/matthijs/Documents/repos/register_simulation/src",
