Added first implementation of UART transfer functions. Added dedicated UART error codes for reporting config and transfer errors.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,8 @@
         "shared_mutex": "cpp",
         "typeindex": "cpp",
         "clocks.h": "c",
-        "source_location": "cpp"
+        "source_location": "cpp",
+        "*.ipp": "cpp"
     },
     "cmake.configureOnOpen": true,
     "cmake.sourceDirectory": "/home/matthijs/Documents/repos/register_simulation/src",
