Split the "UART peripheral" code from the implementation of its "resource-handle"-class. Added a unit test for the send() function.

--- a/lib/rp2040/CMakeLists.txt
+++ b/lib/rp2040/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(rp2040_impl STATIC
     src/time/clock_control.cpp
     src/time/ROSC.cpp
     src/UART/UART.cpp
+    src/UART/UART_peripheral.cpp
     src/subsystem_resets/resets.cpp)
 
 include(CheckIPOSupported)
