--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build_tests/tests",
-            // "args": [ "--gtest_filter=UART_tests.*"
-            // ],
+            "args": [ "--gtest_filter=UART_tests.transmitting_more_than_TX_FIFO_size_bytes_returns_FIFO_size"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
