Fixed bug where "TX-FIFO-full"-flag was not set. Caused by offsetof(...) giving the offset in bytes. While the register_integral-storage-array was indexing in 4-byte intervals. Solved by dividing by sizeof the field.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build_tests/tests",
-            "args": [ "--gtest_filter=UART_tests.transmitting_more_than_TX_FIFO_size_bytes_returns_FIFO_size"],
+            "args": [ // "--gtest_filter=UART_tests.transmitting_more_than_TX_FIFO_size_bytes_returns_FIFO_size"
+            ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
