Changed register used to evaluate UART receive errors from UARTDR to UARTRSR. This is to ensure that the UARTDR-read is done on the simulated-peripheral bitfield to trigger the effect handler.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,16 +13,16 @@ include(CTest)
 
 add_executable(tests GPIO_tests.cpp clock_control_tests.cpp UART_tests.cpp ROSC_tests.cpp misc_tests.cpp)
 
-include(CheckIPOSupported)
-check_ipo_supported(RESULT supported OUTPUT error)
-if( supported )
-message(STATUS "IPO / LTO enabled")
-    set_target_properties(tests PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
-else()
-    message(STATUS "IPO / LTO not supported: <${error}>")
-endif()
+# include(CheckIPOSupported)
+# check_ipo_supported(RESULT supported OUTPUT error)
+# if( supported )
+# message(STATUS "IPO / LTO enabled")
+#     set_target_properties(tests PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
+# else()
+#     message(STATUS "IPO / LTO not supported: <${error}>")
+# endif()
 
-target_compile_options(tests PRIVATE -fprofile-arcs -ftest-coverage -Og -g)
+target_compile_options(tests PRIVATE -fprofile-arcs -ftest-coverage -O0 -g)
 target_link_options(tests PRIVATE -lgcov --coverage)
 target_link_libraries(tests PRIVATE rp2040_impl GTest::gtest_main)
 set_target_properties(tests PROPERTIES CXX_STANDARD 23)
