refactored error_code again to have a namespace. Changed the classes to be within namespace "error" with classes "code", "category" and "value". Having linker error with the make_error_code helper function.

--- a/lib/HAL/CMakeLists.txt
+++ b/lib/HAL/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(HAL)
 
-add_library(HAL STATIC src/simulated_device_register.cpp src/syscalls.cpp src/clock_control.cpp src/error_code.cpp)
+add_library(HAL STATIC src/simulated_device_register.cpp src/syscalls.cpp)
 target_include_directories(HAL PUBLIC inc)
 set_target_properties(HAL PROPERTIES CXX_STANDARD 23)
 target_compile_options(HAL PRIVATE -Og -g)
