Got it to compile and link by putting the template specializations back into the headers. Unsure if the local category instances are unique in their allocations. Deferred the static handle creations to member functions to be sure.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/build_tests/tests",
             "args": [
-                "--gtest_filter=UART_tests.sending_character_with_loopback_enabled_can_be_received"
+               //  "--gtest_filter=UART_tests.sending_character_with_loopback_enabled_can_be_received"
             ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
