--- a/.github/workflows/build_and_run_tests.yml
+++ b/.github/workflows/build_and_run_tests.yml
@@ -22,11 +22,11 @@ jobs:
       working-directory: ${{github.workspace}}    
       run: cmake tests -B ./build_directory -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
-    - name: Build
+    - name: Build the code
       working-directory: ${{github.workspace}}
       run: cmake --build ./build_directory --config ${{env.BUILD_TYPE}}
 
-    - name: Test
+    - name: Run the test executable
       working-directory: ${{github.workspace}}
       run: ctest --verbose --build-config ${{env.BUILD_TYPE}} --test-dir ./build_directory
 
@@ -44,6 +44,7 @@ jobs:
         #   branches...: no data found
       # This is then filtered into the "lines"-line by grep.
       # The percentage value of which is compared by awk to be greater than "LINE_COVERAGE_PERCENTAGE"
+      
       run: lcov --summary coverage.info | grep lines | awk '{if(int($2) > ${{env.LINE_COVERAGE_PERCENTAGE}}){ exit(0)} else{ exit(1)}}'
 
 
