--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,7 +79,8 @@
         "clocks.h": "c",
         "source_location": "cpp",
         "*.ipp": "cpp",
-        "cerrno": "cpp"
+        "cerrno": "cpp",
+        "*.inc": "cpp"
     },
     "cmake.configureOnOpen": true,
     "cmake.sourceDirectory": "/home/matthijs/Documents/repos/register_simulation/src",
