Added more weak syscall implementations. Can now build firmware with LTO/WPO enabled. Is still >400kB in size though.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,7 @@ pico_sdk_init()
 add_executable(main main.cpp application.cpp)
 
 target_link_libraries(main PRIVATE HAL rp2040_impl pico_stdlib)
-target_compile_options(main PRIVATE -Og -g)
+target_compile_options(main PRIVATE -Og)
 pico_enable_stdio_usb(main 1)
 pico_enable_stdio_uart(main 0)
 pico_add_extra_outputs(main)
@@ -26,14 +26,14 @@ set_target_properties(main PROPERTIES CXX_STANDARD 23)
 
 add_executable(UART_snippet UART_snippet.cpp)
 
-# include(CheckIPOSupported)
-# check_ipo_supported(RESULT supported OUTPUT error)
-# if( supported )
-# message(STATUS "IPO / LTO enabled")
-#     set_target_properties(UART_snippet PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
-# else()
-#     message(STATUS "IPO / LTO not supported: <${error}>")
-# endif()
+include(CheckIPOSupported)
+check_ipo_supported(RESULT supported OUTPUT error)
+if( supported )
+message(STATUS "IPO / LTO enabled")
+    set_target_properties(UART_snippet PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
+else()
+    message(STATUS "IPO / LTO not supported: <${error}>")
+endif()
 
 target_link_libraries(UART_snippet PRIVATE HAL rp2040_impl pico_stdlib)
 target_compile_options(UART_snippet PRIVATE -Os)
