--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,7 +22,13 @@ else()
     message(STATUS "IPO / LTO not supported: <${error}>")
 endif()
 
-target_compile_options(tests PRIVATE -fprofile-arcs -ftest-coverage -O0 -g)
+target_compile_options(tests PRIVATE -fprofile-arcs -ftest-coverage)
+if(${CMAKE_BUILD_TYPE} EQUAL DEBUG)
+  target_compile_options(tests PRIVATE -Og -g)
+else()
+  target_compile_options(tests PRIVATE -O3)
+endif()
+
 target_link_options(tests PRIVATE -lgcov --coverage)
 target_link_libraries(tests PRIVATE rp2040_impl GTest::gtest_main)
 set_target_properties(tests PROPERTIES CXX_STANDARD 23)
