Changed launch.json to not use cortex-debug. Removed LTO again from final application build. Now I can debug the UART snippet code.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,6 @@ cmake_minimum_required(VERSION 3.25)
 set(PICO_SDK_FETCH_FROM_GIT on)
 include(pico_sdk_import.cmake)
 
-
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../lib ${CMAKE_CURRENT_BINARY_DIR}/lib)
 
 project(application)
@@ -26,15 +25,16 @@ set_target_properties(main PROPERTIES CXX_STANDARD 23)
 
 add_executable(UART_snippet UART_snippet.cpp)
 
-include(CheckIPOSupported)
-check_ipo_supported(RESULT supported OUTPUT error)
-if( supported )
-message(STATUS "IPO / LTO enabled")
-    set_target_properties(UART_snippet PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
-else()
-    message(STATUS "IPO / LTO not supported: <${error}>")
-endif()
+# include(CheckIPOSupported)
+# check_ipo_supported(RESULT supported OUTPUT error)
+# if( supported )
+# message(STATUS "IPO / LTO enabled")
+#     set_target_properties(UART_snippet PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
+# else()
+#     message(STATUS "IPO / LTO not supported: <${error}>")
+# endif()
 
 target_link_libraries(UART_snippet PRIVATE HAL rp2040_impl pico_stdlib)
-target_compile_options(UART_snippet PRIVATE -Os)
+target_compile_options(UART_snippet PRIVATE -Og -g)
 set_target_properties(UART_snippet PROPERTIES CXX_STANDARD 23)
+pico_add_extra_outputs(UART_snippet)
