--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,23 +31,26 @@
             ]
         },
         {
-            "name": "Pico Debug",
-            "device": "RP2040",
-            "gdbPath": "arm-none-eabi-gdb",
-            "cwd": "${workspaceRoot}",
-            "executable": "${workspaceRoot}/build_app/UART_snippet.elf",
+            "name": "(gdb) launch",
+            "type": "cppdbg",
             "request": "launch",
-            "type": "cortex-debug",
-            "servertype": "openocd",
-            "configFiles": [
-                "/interface/ftdi/ft232h-module-swd.cfg",
-                "/target/rp2040.cfg"
-            ],
-            "svdFile": "${env:PICO_SDK_PATH}/src/rp2040/hardware_regs/rp2040.svd",
-            "runToEntryPoint": "main",
-            "postRestartCommands": [
-                "break main",
-                "continue"
+            "program": "${workspaceFolder}/build_app/UART_snippet.elf",
+            "cwd": ".",
+            "miDebuggerPath": "arm-none-eabi-gdb",
+            "miDebuggerServerAddress": "localhost:3333",
+            "MIMode": "gdb",
+            "stopAtEntry": true,
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
             ]
         },
     ]
