Changed SPI snippet to just send a byte sequence for testing. Changed SPI handle to use divisor calculations also used in pico-SDK.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,6 +40,7 @@
             "miDebuggerServerAddress": "localhost:3333",
             "MIMode": "gdb",
             "stopAtEntry": true,
+            "useExtendedRemote": true,
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
